--- a/ZkFingerDemo/ZkFingerDemo.csproj
+++ b/ZkFingerDemo/ZkFingerDemo.csproj
@@ -60,8 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigDB.cs" />
-    <Compile Include="CsharpSQLiteHelper.cs" />
+    <Compile Include="public\ConfigDB.cs" />
+    <Compile Include="public\CsharpSQLiteHelper.cs" />
     <Compile Include="enums.cs" />
     <Compile Include="FingerMainForm.cs">
       <SubType>Form</SubType>
@@ -69,10 +69,10 @@
     <Compile Include="FingerMainForm.Designer.cs">
       <DependentUpon>FingerMainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="public\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="public\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCheckInit.cs">
@@ -100,10 +100,10 @@
     <Compile Include="frmUserIdentify.Designer.cs">
       <DependentUpon>frmUserIdentify.cs</DependentUpon>
     </Compile>
-    <Compile Include="MatrixCircularProgressControl.cs">
+    <Compile Include="public\MatrixCircularProgressControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MatrixCircularProgressControl.designer.cs">
+    <Compile Include="public\MatrixCircularProgressControl.designer.cs">
       <DependentUpon>MatrixCircularProgressControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -111,7 +111,7 @@
     <EmbeddedResource Include="FingerMainForm.resx">
       <DependentUpon>FingerMainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="public\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
